Restructured folders for better organization.

--- a/app/src/main/res/layout/recyclerview_item.xml
+++ b/app/src/main/res/layout/recyclerview_item.xml
@@ -5,7 +5,7 @@
     <data>
         <variable
             name="cardRecyclerViewItem"
-            type="com.example.android.pointmax.database.Card" />
+            type="com.example.android.pointmax.data.database.entities.Card" />
     </data>
     <LinearLayout
         android:layout_width="match_parent"
